fix(pilot): fix hover text color to have better contrast

--- a/pilot/src/css/app.scss
+++ b/pilot/src/css/app.scss
@@ -5,5 +5,5 @@ a {
 }
 
 a:hover {
-  color: #1976d2; /* Optional: hover color */
+  color: #cce4fc; /* Optional: hover color */
 }
